complete the high scores without using two list